Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-15983

QBS 1.5: no ouptut when using ( print or console.info/warning )

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P5: Not important P5: Not important
    • Qt Creator 4.0.1
    • Qt Creator 4.0.0-beta1
    • Windows 7 64bit MSVC2013
      Qtcreator 4.0.0-beta1
    • d89fc0bfeaecc367d88ac26e57e255a7ae1fb5fe

      No output to QtCreator

              console.debug("DEBUG");
              console.info("INFO");
              print("TEST");
      

      Absolutelly not possible to "debug" qbs in qtcreator

        For Gerrit Dashboard: QTCREATORBUG-15983
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            fbucek fbucek
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes