QbsProjectManager: Logging improvements.

- Make messages with level "warning" or "error" appear in the Issues
  pane.
- Do not suppress messages of level "info". People add "console.info()"
  calls into their projects for debugging and they expect to see the
  output in Creator.

Task-number: QTCREATORBUG-15983
Change-Id: I6c84bc1ef08dbf85d7e88af864b18f64fcedfe1a
Reviewed-by: Jake Petroules <jake.petroules@qt.io>